--- a/code/Mage/Testimonials/view/frontend/layout/testimonials_index_index.xml
+++ b/code/Mage/Testimonials/view/frontend/layout/testimonials_index_index.xml
@@ -1,7 +1,14 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" layout="1column">
-<body>
-    <referenceContainer name="content">
-        <block class="Mage\Testimonials\Block\Testimonials" name="testimonials" template="testimonials.phtml" />
-    </referenceContainer>
-</body>
+
+        <head>
+            <css src="Mage_Testimonials::css/source/module.css"/>
+            <link src="Mage_Testimonials::js/module.js"/>
+        </head>
+
+
+    <body>
+        <referenceContainer name="content">
+            <block class="Mage\Testimonials\Block\Testimonials" name="testimonials" template="testimonials.phtml" />
+        </referenceContainer>
+    </body>
 </page>
