--- a/code/Mage/Testimonials/view/frontend/templates/testimonials.phtml
+++ b/code/Mage/Testimonials/view/frontend/templates/testimonials.phtml
@@ -1,66 +1,75 @@
-<style>
-    table {  font-family: arial, sans-serif;  border-collapse: collapse;  width: 100%;  margin-top: 30px;}
-    td, th {  border: 1px solid #dddddd;  text-align: left;  padding: 8px;  }
-    tr:nth-child(even) { background-color: #dddddd; }
-    .post-id{width:2%} .post-name{width:30%}
+<?php
 
-</style>
+/**
+ * @var \Mage\Testimonials\Block\Testimonials $block
+ */
 
-<div>
+?>
+<div class="testimonials-block">
 
-    <div class="testimonial-block">
-            <span class="testimonial-alert">
+<h2 class="testimonials-title"><?php echo __('Testimonials') ?></h2>
+<?php
+
+$objectManager = \Magento\Framework\App\ObjectManager::getInstance();
+$customerSession = $objectManager->create('Magento\Customer\Model\Session');
+
+if ($customerSession->isLoggedIn()): ?>
+
+    <div class="testimonials-form-wrapper">
+        <div class="testimonial-button"><?php echo __('Submit your testimonial') ?></div>
+        <form method="post" action="<?= $block->getUrl('testimonials/index/store') ?>" data-role="testimonials-form" class="testimonials-form">
+            <div class="testimonials-title">
+                <?php echo __('Add testimonial') ?>
+            </div>
+            <input name="form_key" type="hidden" value="<?php echo $block->getFormKey();?>">
+            <textarea name="post-content" placeholder="Testimonial text" autofocus></textarea>
+            <button class="testimonial-submit" type="submit"><?php echo __('Submit testimonial') ?></button>
+        </form>
+    </div>
+<?php else: ?>
+
+      <div class="login-wrapper">
+        <span class="testimonials-notification">
                 <?php echo __('You must be logged in to leave a testimonials'); ?>
-            </span>
-        <div class="testimonial-login">
-            <a href="<?= $block->getUrl('/customer/account/login/') ?>">
+        </span>
+
+        <div class="testimonials-login">
+            <a href="<?= $block->escapeUrl($block->getUrl('customer/account/login')); ?>">
                 <?php echo __('Login'); ?>
             </a>
         </div>
-    </div>
-
-    <form method="post" action="<?= $block->getUrl('testimonials/index/store') ?>" data-role="testimonials-form" class="testimonials-form">
-        <div class="testimonials-title">
-            <?php echo __('Add testimonial') ?>
-        </div>
-        <input name="form_key" type="hidden" value="<?php echo $block->getFormKey();?>">
-        <textarea name="post_content" placeholder="Testimonial text" autofocus></textarea>
-        <button class="testimonial-submit" type="submit"><?php echo __('Submit testimonial') ?></button>
-    </form>
+      </div>
 
 
-
-
+<?php endif ?>
 </div>
 
-<table>
-    <tr>
-        <th class="post-name">Name</th>
-        <th class="post-name">Date</th>
-        <th>Content</th>
-    </tr>
+
+    <?php foreach ($block->getPostCollection() as $post):
+        $customerID = $post->getUserId();
+        $objectManager = \Magento\Framework\App\ObjectManager::getInstance();
+        $customerObj = $objectManager->create('Magento\Customer\Model\Customer')->load($customerID); ?>
+
+        <div class="testimonials-wrapper">
+            <div class="testimonials-customer-info">
+                <div class="testimonials-customer-name">
+                            <?php echo $customerObj->getName();?>
+                </div>
+                <div class="testimonials-publish-date">
+                            <?php echo (new DateTime($post->getCreatedAt()))->format('d/m/Y'); ?>
+                </div>
+            </div>
+            <div class="testimonials-content">
+                <?php echo $post->getPostContent();?>
+            </div>
+        </div>
+    <?php endforeach;?>
+
+    <?php if ($block->getPagerHtml()): ?>
+        <div class="testimonial-pagination">
+            <?php echo $block->getPagerHtml(); ?>
+        </div>
+    <?php endif ?>
 
 
-    <?php
-    foreach ($block->getPostCollection() as $post){
-
-        echo '<tr>
-                    <td>'.$post->getFirstname().'</td>
-                    <td>'.$post->getCustomerLastName().'</td>
-                  </tr>';
-    }
-    ?>
-
-    <?php
-    foreach ($block->getPostCollection() as $post){
-
-        echo '<tr>
-                    <td>'.$post->getCustomerFirstName().'</td>
-                    <td>'.(new DateTime($post->getCreatedAt()))->format('d/m/Y').'</td>
-                    <td>'.$post->getPostContent().'</td>
-                  </tr>';
-    }
-    ?>
-
-</table>
 
