--- a/code/Mage/Testimonials/view/frontend/web/css/source/module.css
+++ b/code/Mage/Testimonials/view/frontend/web/css/source/module.css
@@ -109,5 +109,28 @@
     margin-right: 20px;
 }
 .testimonials-block .login-wrapper{
+    position: fixed;
+    z-index: 999;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: none;
+}
+.testimonials-block .login-container{
+    width: 500px;
+    margin: 40px auto 0;
+    padding: 20px;
+    background: #fff;
     display: flex;
+    justify-content: center;
+    position: relative;
+}
+.testimonials-block .login-container .modal-close{
+    position: absolute;
+    top: -15px;
+    right: -8px;
+    font-size: 20px;
+    cursor: pointer;
 }
