--- a/code/Mage/Testimonials/view/frontend/layout/testimonials_index_index.xml
+++ b/code/Mage/Testimonials/view/frontend/layout/testimonials_index_index.xml
@@ -7,6 +7,7 @@
 
 
     <body>
+        <referenceBlock name="page.main.title" remove="true"/>
         <referenceContainer name="content">
             <block class="Mage\Testimonials\Block\Testimonials" name="testimonials" template="testimonials.phtml" />
         </referenceContainer>
