email send added

--- a/code/Mage/Testimonials/view/frontend/templates/testimonials.phtml
+++ b/code/Mage/Testimonials/view/frontend/templates/testimonials.phtml
@@ -17,13 +17,14 @@ if ($customerSession->isLoggedIn()): ?>
 
     <div class="testimonials-form-wrapper">
         <div class="testimonial-button testimonial-form-button"><?php echo __('Submit your testimonial') ?></div>
-        <form method="post" action="<?= $block->getUrl('testimonials/index/store') ?>" data-role="testimonials-form" class="testimonials-form">
+        <form id="testimonials-form-data" method="post" action="<?= $block->getUrl('testimonials/index/store') ?>" data-role="testimonials-form" class="testimonials-form">
             <div class="testimonials-title">
                 <?php echo __('Add testimonial') ?>
             </div>
             <input name="form_key" type="hidden" value="<?php echo $block->getFormKey();?>">
-            <textarea name="post-content" placeholder="Testimonial text" autofocus></textarea>
+            <textarea name="postcontent" placeholder="Testimonial text" autofocus></textarea>
             <button class="testimonial-submit" type="submit"><?php echo __('Submit testimonial') ?></button>
+            <div class="testimonial-loading"><?php echo __('Loading...') ?></div>
         </form>
     </div>
 <?php else: ?>
@@ -75,6 +76,5 @@ if ($customerSession->isLoggedIn()): ?>
             <?php echo $block->getPagerHtml(); ?>
         </div>
     <?php endif ?>
-
 
 
